force-app/main/default/objects/Calculated_Commission__c/Calculated_Commission__c.object-meta.xml
<CustomObject>
    <description>Line item commission calculation per split</description>
    <label>Calculated Commission</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Calculated Commission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculated Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>