force-app/main/default/objects/Calculated_Commission__c/fields/Account_House__c.field-meta.xml
<CustomField>
    <fullName>Account_House__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account House</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Calculated Commissions</relationshipLabel>
    <relationshipName>Calculated_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>