force-app/main/default/objects/Calculated_Commission__c/fields/Direct_Bill_Commission__c.field-meta.xml
<CustomField>
    <fullName>Direct_Bill_Commission__c</fullName>
    <description>Line item from which the calculated commission is generated.</description>
    <label>Direct Bill Commission</label>
    <referenceTo>Direct_Bill_Commission__c</referenceTo>
    <relationshipLabel>Calculated Commissions</relationshipLabel>
    <relationshipName>Calculated_Commissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>