force-app/main/default/objects/Calculated_Commission__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer</label>
    <referenceTo>Producer</referenceTo>
    <relationshipLabel>Calculated Commissions</relationshipLabel>
    <relationshipName>Calculated_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>