force-app/main/default/objects/Calculated_Commission__c/fields/Split_Payee__c.field-meta.xml
<CustomField>
    <fullName>Split_Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Split Payee</label>
    <referenceTo>Split_Payee__c</referenceTo>
    <relationshipLabel>Calculated Commissions</relationshipLabel>
    <relationshipName>Calculated_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>