force-app/main/default/objects/Calculated_Commission__c/fields/Statement_ID__c.field-meta.xml
<CustomField>
    <fullName>Statement_ID__c</fullName>
    <formula>Direct_Bill_Commission__r.Commission_Statement__r.Statement_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statement ID</label>
    <type>Text</type>
</CustomField>