force-app/main/default/objects/Calculated_Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Producer__c</columns>
    <columns>Direct_Bill_Commission__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>